<resources>
    <string name="ApplicationName" translatable="false">TTRSS-Reader</string>
    <string name="EditPluginActivity_Label" translatable="false">TTRSS-Reader Plugin Settings</string>
    <string name="IntentPublish">Publish content</string>
    <string name="IntentSubscribe">Subscribe to feed</string>
    <string name="ApplicationDescription">Tiny Tiny RSS Reader is an application for reading your feeds from your Tiny Tiny RSS instance.</string>
    <string name="Main_ShowPreferencesMenu">Preferences</string>
    <string name="Main_RefreshMenu">Refresh</string>
    <string name="Main_ImageCache">Cache images</string>
    <string name="Main_ImageCacheCancel">Cancel \"Cache images\"</string>
    <string name="Main_ImageCache_NetworkMetered">You are on a metered network and this function may use a considerable amount of data. Are you sure?</string>
    <string name="Main_ImageCache_NetworkMobile">You are on a mobile network and this function may use a considerable amount of data. Are you sure?</string>
    <string name="Main_ImageCache_YesNoTitle">Start ImageCache?</string>
    <string name="Main_ImageCache_ConnectivityLost">The connection has been lost. To avoid wasting traffic the download has been stopped.</string>
    <string name="Preferences_Reset_YesNoTitle">Reset data</string>
    <string name="Preferences_Reset">Reset app settings</string>
    <string name="Preferences_Reset_Summary">All app preferences (including login data) are reset to factory defaults.</string>
    <string name="Preferences_Reset_YesNoMsg">Reset all preferences?</string>
    <string name="Preferences_Reset_Done">Preferences have been reset.</string>
    <string name="Preferences_ResetDatabase">Reset Database</string>
    <string name="Preferences_ResetDatabase_Summary">Resets all stored content data (except cached images) and re-initializes the database.</string>
    <string name="Preferences_ResetDatabase_YesNoMsg">Reset database?</string>
    <string name="Preferences_ResetDatabase_Done">Database has been reset.</string>
    <string name="Preferences_ResetCache">Reset ImageCache</string>
    <string name="Preferences_ResetCache_Summary">Deletes all cached images from the internal storage.</string>
    <string name="Preferences_ResetCache_YesNoMsg">Delete ImageCache?</string>
    <string name="Preferences_ResetCache_Done">ImageCache has been reset.</string>
    <string name="ConnectionPreferenceCategoryTitle">Connection</string>
    <string name="ConnectionUrlPreferenceTitle">Connection URL</string>
    <string name="ConnectionUrlPreferenceSummary">The URL to your Tiny Tiny RSS instance.</string>
    <string name="ConnectionUsernamePreferenceTitle">Username</string>
    <string name="ConnectionUsernamePreferenceSummary">The username of your Tiny Tiny RSS account.</string>
    <string name="ConnectionPasswordPreferenceTitle">Password</string>
    <string name="ConnectionPasswordPreferenceSummary">The password of your Tiny Tiny RSS account.</string>
    <string name="ConnectionLazyServerPreferenceTitle">Lazy Server</string>
    <string name="ConnectionLazyServerPreferenceSummary">Ask the server to update its feeds before we fetch them.</string>
    <string name="ConnectionProxyPreferenceTitle">Use SOCKS Proxy</string>
    <string name="ConnectionProxyPreferenceSummary">Enable connection via SOCKS proxy</string>
    <string name="ConnectionProxyHostPreferenceTitle">Proxy Host</string>
    <string name="ConnectionProxyHostPreferenceSummary">Host of the SOCKS proxy</string>
    <string name="ConnectionProxyPortPreferenceTitle">Proxy Port</string>
    <string name="ConnectionProxyPortPreferenceSummary">Port number of the SOCKS proxy</string>
    <string name="ConnectionFeedIconsUrlPreferenceTitle">Feed Icons path</string>
    <string name="ConnectionFeedIconsUrlPreferenceSummary">The base URL path to the feed icons</string>
    <string name="ConnectionFeedIconsUrlPreferenceDefault" translatable="false">feed-icons</string>
    <string name="UsagePreferenceCategoryTitle">Usage</string>
    <string name="UsageOpenUrlEmptyArticleTitle">Open URL for empty article</string>
    <string name="UsageOpenUrlEmptyArticleSummary">Automatically visits the article website in the browser if the content is empty.</string>
    <string name="UsageUseVolumeKeysTitle">Navigate with volume-keys</string>
    <string name="UsageUseVolumeKeysSummary">Press up for the next newer article, down for older article.</string>
    <string name="DisplayPreferenceCategoryTitle">Display</string>
    <string name="DisplayMarkReadInsteadOfPublishTitle">Prefer \"Mark Unread\" over \"Publish\"</string>
    <string name="DisplayMarkReadInsteadOfPublishSummary">Always show \"Mark Unread\" instead of \"Publish\" button</string>
    <string name="DisplayVirtualPreferenceTitle">Show virtual feeds</string>
    <string name="DisplayVirtualPreferenceSummary">Uncheck to hide TTRSS virtual feeds.</string>
    <string name="DisplayLoadImagesPreferenceTitle">Load media</string>
    <string name="DisplayLoadImagesPreferenceSummary">Uncheck to disable loading external media in articles. This applies to images, audio and video data.</string>
    <string name="InvertBrowseArticlesPreferenceTitle">Invert browsing articles</string>
    <string name="InvertBrowseArticlesPreferenceSummary">If checked, opening a category directly opens all articles within, else it shows the feeds.</string>
    <string name="GoBackAfterMarkAllReadPreferenceTitle">Go back after mark all items as read</string>
    <string name="GoBackAfterMarkAllReadPreferenceSummary">If checked, then go one level up after mark all current items as read.</string>
    <string name="HideActionbarTitle">Hide ActionBar</string>
    <string name="HideActionbarSummary">Hides the ActionBar on small screens when it is not necessary to show it. It is always shown when you scroll upwards.</string>
    <string name="HideFeedReadButtonsTitle">Hide \"Feed Read\" option</string>
    <string name="HideFeedReadButtonsSummary">If checked, this disables the ability to mark an entire feed as read in a single button tap. The corresponding icons are hidden from the menu and ActionBar.</string>
    <string name="AllowTabletLayoutTitle">Enable Tablet-Layout</string>
    <string name="AllowTabletLayoutSummary">If checked, the tablet layout will be used if your screen is above 7\".</string>
    <string name="DisplayFeedIconsPreferenceTitle">Display Feed icons</string>
    <string name="DisplayFeedIconsPreferenceSummary">If checked, the favicons of all feeds will be loaded and displayed.</string>
    <string name="ShowButtonsModeTitle">Select Navigation Buttons Mode</string>
    <string name="ShowButtonsModeSummary">How navigation buttons in article view should be shown.</string>
    <string name="TextZoomTitle">Text-Zoom in percent</string>
    <string name="TextZoomSummary">Zoom (textual) content of articles by n%.</string>
    <string name="SupportZoomControlsTitle">Support Zoom Controls</string>
    <string name="SupportZoomControlsSummary">ATTENTION: This disables gesture functionality when displaying articles because of a bug! When disabled, no zoom controls will be shown in article view.</string>
    <string name="AllowHyphenationTitle">Allow Hyphenation</string>
    <string name="AllowHyphenationSummary">Enable word hyphenation in articles.</string>
    <string name="HyphenationLanguageTitle">Hyphenation Language</string>
    <string name="HyphenationLanguageSummary">Choose the language used for hyphenation.</string>
    <string name="CacheImagesOnStartupTitle">Start ImageCache on startup?</string>
    <string name="CacheImagesOnStartupSummary">Enable to start the image-cache on every start of the reader, all articles+images will be fetched in the background.</string>
    <string name="CacheImagesOnlyWifiTitle">Only on Wifi?</string>
    <string name="CacheImagesOnlyWifiSummary">Sets the automatic ImageCache on startup to only run when Wifi is used.</string>
    <string name="DisplayAlignFlushLeftTitle">Left-aligned Text</string>
    <string name="DisplayAlignFlushLeftSummary">Article text will be aligned flush left, ragged right. Default is justified.</string>
    <string name="DisplayDateTimeFormatSystemTitle">Date/Time format</string>
    <string name="DisplayDateTimeFormatSystemSummary">Enable to use the system\'s default for displaying date and time. Disable to use a custom format.</string>
    <string name="DisplayDateFormatTitle">Custom date format</string>
    <string name="DisplayDateFormatSummary">Specify a DateFormat string for the date (see Wiki). Defaults to \"dd.MM.yyyy\". Invalid values will be silently ignored and the default will be used.</string>
    <string name="DisplayDateFormatDefault" translatable="false">dd.MM.yyyy</string>
    <string name="DisplayTimeFormatTitle">Custom time format</string>
    <string name="DisplayTimeFormatSummary">Specify a DateFormat string for the time (see Wiki). Defaults to \"kk:mm\". Invalid values will be silently ignored and the default will be used.</string>
    <string name="DisplayTimeFormatDefault" translatable="false">kk:mm</string>
    <string name="DisplayDateTimeFormatTitle">Custom date with time format</string>
    <string name="DisplayDateTimeFormatSummary">Specify a format string for the date with time (see Wiki). Defaults to \"dd.MM.yyyy kk:mm\". Invalid values will be silently ignored and the default will be used.</string>
    <string name="DisplayDateTimeFormatDefault" translatable="false">dd.MM.yyyy kk:mm</string>
    <string name="DisplayThemeTitle">Select App-Theme</string>
    <string name="DisplayThemeSummary">Select \"Auto\" to follow the system settings for dark mode (or battery-safer on Android 9 and below).</string>
    <string name="DisplayAnimationsTitle">Enable Animations</string>
    <string name="DisplayAnimationsSummary">Enables transition animations when switching articles and feeds.</string>
    <string name="SystemPreferenceCategoryTitle">System</string>
    <string name="DeleteDBOnNextStartupTitle">Delete DB on next startup</string>
    <string name="DeleteDBOnNextStartupSummary">If set to true the internal database will be deleted only on the next start of the application.</string>
    <string name="OnlyUseWifiTitle">Only connect on WIFI</string>
    <string name="OnlyUseWifiSummary">When enabled the app will only connect to the server when the device is in a WIFI network.</string>
    <string name="NoCrashreportsTitle">Disable crash reports</string>
    <string name="NoCrashreportsSummary">Completely disables the reporting functionality. Please note: To make the amount of bugreports bearable for me I provide a file with the currently supported version information on private websapce which is retrieved regularly. Apart from this mechanism no data is transferred without your explicit consent.</string>
    <string name="NoCrashreportsUntilUpdateTitle">Disable crash reports until next update</string>
    <string name="NoCrashreportsUntilUpdateSummary">Disables crash reporting until the next update of the app is installed. Please note that in NO case any data is transferred without your consent anyway, I just open the mail app and you can review any transmitted data before sending the mail.</string>
    <string name="SaveAttachmentTitle">Save attachments…</string>
    <string name="CacheFolderMaxSizeTitle">Cache-Folder maximal size</string>
    <string name="CacheFolderMaxSizeSummary">Maximal size of all cached files in MB</string>
    <string name="CacheImageMaxSizeTitle">Cacheable image maximum size</string>
    <string name="CacheImageMaxSizeSummary">Maximum file size of images which should be cached in KB</string>
    <string name="CacheImageMinSizeTitle">Cacheable image minimum size</string>
    <string name="CacheImageMinSizeSummary">Minimum file size of images which should be cached in KB</string>
    <string name="Empty" translatable="false"><![CDATA[]]></string>
</resources>