<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (c) 2015, Nils Braden

  This file is part of ttrss-reader-fork. This program is free software; you
  can redistribute it and/or modify it under the terms of the GNU
  General Public License as published by the Free Software Foundation;
  either version 3 of the License, or (at your option) any later
  version.

  This program is distributed in the hope that it will be useful, but
  WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  General Public License for more details. You should have received a
  copy of the GNU General Public License along with this program; If
  not, see http://www.gnu.org/licenses/.
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/DisplayPreferenceCategoryTitle">

    <PreferenceCategory android:title="@string/DisplayPreferenceCategoryTitle">
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/themeEntries"
            android:entryValues="@array/themeValues"
            android:key="DisplayThemePreferenceAuto"
            android:summary="@string/DisplayThemeSummary"
            android:title="@string/DisplayThemeTitle" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="DisplayAnimationsPreference"
            android:summary="@string/DisplayAnimationsSummary"
            android:title="@string/DisplayAnimationsTitle" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="DisplayAlignFlushLeftPreference"
            android:summary="@string/DisplayAlignFlushLeftSummary"
            android:title="@string/DisplayAlignFlushLeftTitle" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="DisplayDateTimeFormatSystemPreference"
            android:summary="@string/DisplayDateTimeFormatSystemSummary"
            android:title="@string/DisplayDateTimeFormatSystemTitle" />
        <EditTextPreference
            android:name="@string/DisplayDateFormatTitle"
            android:defaultValue="@string/DisplayDateFormatDefault"
            android:dependency="DisplayDateTimeFormatSystemPreference"
            android:inputType="textFilter"
            android:key="DisplayDateFormatPreference"
            android:summary="@string/DisplayDateFormatSummary"
            android:title="@string/DisplayDateFormatTitle" />
        <EditTextPreference
            android:name="@string/DisplayTimeFormatTitle"
            android:defaultValue="@string/DisplayTimeFormatDefault"
            android:dependency="DisplayDateTimeFormatSystemPreference"
            android:inputType="textFilter"
            android:key="DisplayTimeFormatPreference"
            android:summary="@string/DisplayTimeFormatSummary"
            android:title="@string/DisplayTimeFormatTitle" />
        <EditTextPreference
            android:name="@string/DisplayDateTimeFormatTitle"
            android:defaultValue="@string/DisplayDateTimeFormatDefault"
            android:dependency="DisplayDateTimeFormatSystemPreference"
            android:inputType="textFilter"
            android:key="DisplayDateTimeFormatPreference"
            android:summary="@string/DisplayDateTimeFormatSummary"
            android:title="@string/DisplayDateTimeFormatTitle" />

        <org.ttrssreader.preferences.EditIntegerPreference
            android:name="@string/TextZoomTitle"
            android:defaultValue="100"
            android:inputType="number"
            android:key="TextZoomPreference"
            android:maxLength="3"
            android:summary="@string/TextZoomSummary"
            android:title="@string/TextZoomTitle" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="SupportZoomControlsPreference"
            android:summary="@string/SupportZoomControlsSummary"
            android:title="@string/SupportZoomControlsTitle" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="AllowHyphenationPreference"
            android:summary="@string/AllowHyphenationSummary"
            android:title="@string/AllowHyphenationTitle" />

        <ListPreference
            android:defaultValue="en-gb"
            android:entries="@array/HyphenationLanguageEntries"
            android:entryValues="@array/HyphenationLanguageValues"
            android:key="HyphenationLanguagePreference"
            android:summary="@string/HyphenationLanguageSummary"
            android:title="@string/HyphenationLanguageTitle" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:enabled="true"
            android:key="AllowTabletLayoutPreference"
            android:summary="@string/AllowTabletLayoutSummary"
            android:title="@string/AllowTabletLayoutTitle" />
    </PreferenceCategory>

</PreferenceScreen>
