<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2015, Nils Braden

  This file is part of ttrss-reader-fork. This program is free software; you
  can redistribute it and/or modify it under the terms of the GNU
  General Public License as published by the Free Software Foundation;
  either version 3 of the License, or (at your option) any later
  version.

  This program is distributed in the hope that it will be useful, but
  WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  General Public License for more details. You should have received a
  copy of the GNU General Public License along with this program; If
  not, see http://www.gnu.org/licenses/.
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/UsagePreferenceCategoryTitle">

    <PreferenceCategory android:title="@string/UsagePreferenceCategoryTitle">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="UsageOpenUrlEmptyArticlePreference"
            android:summary="@string/UsageOpenUrlEmptyArticleSummary"
            android:title="@string/UsageOpenUrlEmptyArticleTitle"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="UsageUseVolumeKeysPreference"
            android:summary="@string/UsageUseVolumeKeysSummary"
            android:title="@string/UsageUseVolumeKeysTitle"/>

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/ShowButtonsModeEntries"
            android:entryValues="@array/ShowButtonsModeValues"
            android:key="ShowButtonsModePreference"
            android:summary="@string/ShowButtonsModeSummary"
            android:title="@string/ShowButtonsModeTitle"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="DisplayShowVirtualPreference"
            android:summary="@string/DisplayVirtualPreferenceSummary"
            android:title="@string/DisplayVirtualPreferenceTitle"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="DisplayLoadImagesPreference"
            android:summary="@string/DisplayLoadImagesPreferenceSummary"
            android:title="@string/DisplayLoadImagesPreferenceTitle"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="InvertBrowseArticlesPreference"
            android:summary="@string/InvertBrowseArticlesPreferenceSummary"
            android:title="@string/InvertBrowseArticlesPreferenceTitle"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="GoBackAfterMarkAllReadPreference"
            android:summary="@string/GoBackAfterMarkAllReadPreferenceSummary"
            android:title="@string/GoBackAfterMarkAllReadPreferenceTitle"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="PreferMarkReadOverPublish"
            android:summary="@string/DisplayMarkReadInsteadOfPublishSummary"
            android:title="@string/DisplayMarkReadInsteadOfPublishTitle" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="HideActionbarPreference"
            android:summary="@string/HideActionbarSummary"
            android:title="@string/HideActionbarTitle"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="HideFeedReadButtons"
            android:summary="@string/HideFeedReadButtonsSummary"
            android:title="@string/HideFeedReadButtonsTitle"/>
    </PreferenceCategory>

</PreferenceScreen>
