<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (c) 2015, Nils Braden

  This file is part of ttrss-reader-fork. This program is free software; you
  can redistribute it and/or modify it under the terms of the GNU
  General Public License as published by the Free Software Foundation;
  either version 3 of the License, or (at your option) any later
  version.

  This program is distributed in the hope that it will be useful, but
  WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  General Public License for more details. You should have received a
  copy of the GNU General Public License along with this program; If
  not, see http://www.gnu.org/licenses/.
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/SystemPreferenceCategoryTitle">

    <PreferenceCategory android:title="@string/SystemPreferenceCategoryTitle">
        <CheckBoxPreference
            android:defaultValue="false"
            android:disableDependentsState="false"
            android:key="CacheImagesOnStartupPreference"
            android:summary="@string/CacheImagesOnStartupSummary"
            android:title="@string/CacheImagesOnStartupTitle" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="CacheImagesOnStartupPreference"
            android:key="CacheImagesOnlyWifiPreference"
            android:summary="@string/CacheImagesOnlyWifiSummary"
            android:title="@string/CacheImagesOnlyWifiTitle" />

        <Preference
            android:key="SaveAttachmentPreference"
            android:persistent="false"
            android:summary="- PATH - set by activity -"
            android:title="@string/SaveAttachmentTitle" />

        <org.ttrssreader.preferences.EditIntegerPreference
            android:name="@string/CacheFolderMaxSizeTitle"
            android:defaultValue="80"
            android:inputType="number"
            android:key="CacheFolderMaxSizePreference"
            android:maxLength="4"
            android:summary="@string/CacheFolderMaxSizeSummary"
            android:title="@string/CacheFolderMaxSizeTitle" />
        <org.ttrssreader.preferences.EditIntegerPreference
            android:name="@string/CacheImageMaxSizeTitle"
            android:defaultValue="32768"
            android:inputType="number"
            android:key="CacheImageMaxSizePreference"
            android:maxLength="5"
            android:summary="@string/CacheImageMaxSizeSummary"
            android:title="@string/CacheImageMaxSizeTitle" />
        <org.ttrssreader.preferences.EditIntegerPreference
            android:name="@string/CacheImageMinSizeTitle"
            android:defaultValue="32"
            android:inputType="number"
            android:key="CacheImageMinSizePreference"
            android:maxLength="4"
            android:summary="@string/CacheImageMinSizeSummary"
            android:title="@string/CacheImageMinSizeTitle" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="DeleteDBScheduledPreference"
            android:summary="@string/DeleteDBOnNextStartupSummary"
            android:title="@string/DeleteDBOnNextStartupTitle" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="OnlyUseWifiPreference"
            android:summary="@string/OnlyUseWifiSummary"
            android:title="@string/OnlyUseWifiTitle" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="NoCrashreportsPreference"
            android:summary="@string/NoCrashreportsSummary"
            android:title="@string/NoCrashreportsTitle" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="NoCrashreportsUntilUpdatePreference"
            android:summary="@string/NoCrashreportsUntilUpdateSummary"
            android:title="@string/NoCrashreportsUntilUpdateTitle" />
    </PreferenceCategory>

</PreferenceScreen>
