<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (c) 2015, Nils Braden

  This file is part of ttrss-reader-fork. This program is free software; you
  can redistribute it and/or modify it under the terms of the GNU
  General Public License as published by the Free Software Foundation;
  either version 3 of the License, or (at your option) any later
  version.

  This program is distributed in the hope that it will be useful, but
  WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  General Public License for more details. You should have received a
  copy of the GNU General Public License along with this program; If
  not, see http://www.gnu.org/licenses/.
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/ConnectionPreferenceCategoryTitle">

    <PreferenceCategory
        android:key="connectionCategory"
        android:title="@string/ConnectionPreferenceCategoryTitle">
        <EditTextPreference
            android:order="10"
            android:name="@string/ConnectionUrlPreferenceTitle"
            android:defaultValue="https://localhost/"
            android:inputType="textUri"
            android:key="ConnectionUrlPreference"
            android:summary="@string/ConnectionUrlPreferenceSummary"
            android:title="@string/ConnectionUrlPreferenceTitle" />
        <EditTextPreference
            android:order="20"
            android:name="@string/ConnectionUsernamePreferenceTitle"
            android:inputType="textFilter"
            android:key="ConnectionUsernamePreference"
            android:summary="@string/ConnectionUsernamePreferenceSummary"
            android:title="@string/ConnectionUsernamePreferenceTitle" />
        <EditTextPreference
            android:order="30"
            android:name="@string/ConnectionPasswordPreferenceTitle"
            android:inputType="textPassword"
            android:key="ConnectionPasswordPreference"
            android:summary="@string/ConnectionPasswordPreferenceSummary"
            android:title="@string/ConnectionPasswordPreferenceTitle" />

        <CheckBoxPreference
            android:order="40"
            android:defaultValue="true"
            android:disableDependentsState="false"
            android:key="DisplayFeedIconsPreference"
            android:summary="@string/DisplayFeedIconsPreferenceSummary"
            android:title="@string/DisplayFeedIconsPreferenceTitle" />
        <EditTextPreference
            android:order="50"
            android:name="@string/ConnectionFeedIconsUrlPreferenceTitle"
            android:defaultValue="@string/ConnectionFeedIconsUrlPreferenceDefault"
            android:dependency="DisplayFeedIconsPreference"
            android:inputType="textFilter"
            android:key="ConnectionUrlFeedIconsPreference"
            android:summary="@string/ConnectionFeedIconsUrlPreferenceSummary"
            android:title="@string/ConnectionFeedIconsUrlPreferenceTitle" />

        <CheckBoxPreference
            android:order="60"
            android:defaultValue="false"
            android:key="ConnectionLazyServerPreference"
            android:summary="@string/ConnectionLazyServerPreferenceSummary"
            android:title="@string/ConnectionLazyServerPreferenceTitle" />

        <CheckBoxPreference
            android:order="70"
            android:defaultValue="false"
            android:disableDependentsState="false"
            android:key="ConnectionProxyPreference"
            android:summary="@string/ConnectionProxyPreferenceSummary"
            android:title="@string/ConnectionProxyPreferenceTitle" />
        <EditTextPreference
            android:order="80"
            android:name="@string/ConnectionProxyHostPreferenceTitle"
            android:defaultValue="@string/Empty"
            android:dependency="ConnectionProxyPreference"
            android:inputType="textFilter"
            android:key="ConnectionProxyHostPreference"
            android:summary="@string/ConnectionProxyHostPreferenceSummary"
            android:title="@string/ConnectionProxyHostPreferenceTitle" />
        <org.ttrssreader.preferences.EditIntegerPreference
            android:order="90"
            android:name="@string/ConnectionProxyPortPreferenceTitle"
            android:defaultValue="1080"
            android:dependency="ConnectionProxyPreference"
            android:inputType="number"
            android:key="ConnectionProxyPortPreference"
            android:maxLength="5"
            android:summary="@string/ConnectionProxyPortPreferenceSummary"
            android:title="@string/ConnectionProxyPortPreferenceTitle" />
    </PreferenceCategory>

</PreferenceScreen>
