<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2015, Nils Braden

  This file is part of ttrss-reader-fork. This program is free software; you
  can redistribute it and/or modify it under the terms of the GNU
  General Public License as published by the Free Software Foundation;
  either version 3 of the License, or (at your option) any later
  version.

  This program is distributed in the hope that it will be useful, but
  WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  General Public License for more details. You should have received a
  copy of the GNU General Public License along with this program; If
  not, see http://www.gnu.org/licenses/.
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="@string/ConnectionPreferenceCategoryTitle">

    <PreferenceCategory
        android:key="connectionCategory"
        android:title="@string/ConnectionPreferenceCategoryTitle">
        <EditTextPreference
            android:name="@string/ConnectionUrlPreferenceTitle"
            android:defaultValue="http://localhost/"
            android:inputType="textUri"
            android:key="ConnectionUrlPreference"
            android:order="10"
            android:summary="@string/ConnectionUrlPreferenceSummary"
            android:title="@string/ConnectionUrlPreferenceTitle"/>
        <EditTextPreference
            android:name="@string/ConnectionUsernamePreferenceTitle"
            android:defaultValue=""
            android:inputType="textFilter"
            android:key="ConnectionUsernamePreference"
            android:order="20"
            android:summary="@string/ConnectionUsernamePreferenceSummary"
            android:title="@string/ConnectionUsernamePreferenceTitle"/>
        <EditTextPreference
            android:name="@string/ConnectionPasswordPreferenceTitle"
            android:defaultValue=""
            android:inputType="textPassword"
            android:key="ConnectionPasswordPreference"
            android:order="30"
            android:summary="@string/ConnectionPasswordPreferenceSummary"
            android:title="@string/ConnectionPasswordPreferenceTitle"/>
        <EditTextPreference
            android:name="@string/ConnectionFeedIconsUrlPreferenceTitle"
            android:defaultValue="@string/ConnectionFeedIconsUrlPreferenceDefault"
            android:inputType="textFilter"
            android:key="ConnectionUrlFeedIconsPreference"
            android:order="40"
            android:summary="@string/ConnectionFeedIconsUrlPreferenceSummary"
            android:title="@string/ConnectionFeedIconsUrlPreferenceTitle"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="ConnectionLazyServerPreference"
            android:order="50"
            android:summary="@string/ConnectionLazyServerPreferenceSummary"
            android:title="@string/ConnectionLazyServerPreferenceTitle"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:disableDependentsState="false"
            android:key="ConnectionProxyPreference"
            android:order="50"
            android:summary="@string/ConnectionProxyPreferenceSummary"
            android:title="@string/ConnectionProxyPreferenceTitle"/>
        <EditTextPreference
            android:name="@string/ConnectionProxyHostPreferenceTitle"
            android:defaultValue=""
            android:dependency="ConnectionProxyPreference"
            android:inputType="textFilter"
            android:key="ConnectionProxyHostPreference"
            android:order="60"
            android:summary="@string/ConnectionProxyHostPreferenceSummary"
            android:title="@string/ConnectionProxyHostPreferenceTitle"/>
        <org.ttrssreader.preferences.EditIntegerPreference
            android:name="@string/ConnectionProxyPortPreferenceTitle"
            android:defaultValue="1080"
            android:dependency="ConnectionProxyPreference"
            android:inputType="number"
            android:key="ConnectionProxyPortPreference"
            android:maxLength="5"
            android:order="70"
            android:summary="@string/ConnectionProxyPortPreferenceSummary"
            android:title="@string/ConnectionProxyPortPreferenceTitle"/>
    </PreferenceCategory>

</PreferenceScreen>
